# ParetoPilot

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: benchmark-arm64.yml  candidate-study-arm64.yml  ci.yml  pages.yml
configs/: constraints.candidate-study.json  constraints.example.json  load.arm64.json  policies.arm64.json
demo/canonical-study/: assembly.json  benchmark-set.json  constraints.json  recommendation.json  report.html
docs/: architecture.md  benchmark-methodology.md  devpost-draft.md  evidence-extensions-v1.1.md  github-actions-benchmark.md  llama-bench-contract.md  project-plan.md  reproducibility.md  submission-checklist.md
evals/: qwen-behavior-v2.json  qwen-smoke-v1.json
examples/: synthetic-results.json
results/published/: README.md
results/published/29940067201/: README.md  SHA256SUMS  SOURCE-SHA256SUMS  status.json
results/published/29940067201/commands/: generic-pass-1.json  generic-pass-2.json  kleidiai-pass-1.json  kleidiai-pass-2.json
results/published/29940067201/environment/: g++.txt  gcc.txt  lscpu.txt  paretopilot-doctor.json  runner.json
results/published/29940067201/raw/: generic-pass-1.jsonl  (+3 more)
results/published/29973188507/: README.md  evidence.json
results/published/30055662526/: README.md  evidence.json
src/paretopilot/: __init__.py  __main__.py  analysis.py  cli.py  doctor.py  domain.py  experiment.py  io.py  llama_bench.py  llama_compare.py  llama_summary.py  load_eval.py  pass_eval.py  profiles.py  replay.py  report.py  report_v11.py  server_eval.py  showcase.py  stability.py  study.py
tests/: test_analysis.py  test_cli.py  test_doctor.py  test_domain.py  test_experiment.py  test_io.py  test_llama_bench.py  test_llama_compare.py  test_llama_summary.py  test_load_eval.py  test_pass_eval.py  test_profiles.py  test_replay.py  test_report.py  test_report_v11.py  test_server_eval.py  test_showcase.py  test_stability.py  test_study.py
tests/fixtures/: llama_bench.synthetic.jsonl
tests/fixtures/paired-study/: README.md  SHA256SUMS  manifest.json  provenance.json
(+15 files in other folders)
