[build-system]
requires = ["setuptools>=77.0.3,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "paretopilot"
version = "0.2.0"
description = "Constraint-driven selection for reproducible AI inference benchmarks on Arm64."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ParetoPilot contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agrovr/ParetoPilot"
Repository = "https://github.com/agrovr/ParetoPilot"
Issues = "https://github.com/agrovr/ParetoPilot/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
paretopilot = "paretopilot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
